--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = environments/local/host
+inventory = environments/local/hosts
 roles_path = roles:./kubespray/roles
 
 [privilege_escalation]
