--- a/roles/prepare_nodes/defaults/main.yml
+++ b/roles/prepare_nodes/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# Firewall: ports Kubespray/Kubernetes need between nodes
+# Firewall: ports Kubespray/Kubernetes need between nodes (tag: k8s)
 prepare_firewall_ports:
   - port: "2379/tcp"   # etcd client
   - port: "2380/tcp"   # etcd peer
@@ -8,3 +8,7 @@ prepare_firewall_ports:
   - port: "10257/tcp"  # kube-controller-manager
   - port: "10259/tcp"  # kube-scheduler
   - port: "10256/tcp"  # kube-proxy
+
+# Firewall: ports for Postgres / DB nodes (tag: postgres). Override per env if needed.
+prepare_firewall_ports_postgres:
+  - port: "5432/tcp"   # PostgreSQL
