--- a/roles/prepare_nodes/tasks/firewall.yml
+++ b/roles/prepare_nodes/tasks/firewall.yml
@@ -1,10 +1,11 @@
 ---
+# Only on hosts in group k8s. Tag: k8s (and firewall).
 
 - name: Ensure firewalld is installed (RHEL/Rocky)
   package:
     name: firewalld
     state: present
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and inventory_hostname in groups.get('k8s', [])
   ignore_errors: true
   tags: [k8s, firewall]
 
@@ -13,7 +14,7 @@
     name: firewalld
     state: started
     enabled: true
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and inventory_hostname in groups.get('k8s', [])
   ignore_errors: true
   tags: [k8s, firewall]
 
@@ -26,10 +27,12 @@
   loop: "{{ prepare_firewall_ports }}"
   when:
     - ansible_os_family == "RedHat"
+    - inventory_hostname in groups.get('k8s', [])
     - prepare_firewall_ports is defined
   notify: reload firewalld
   tags: [k8s, firewall]
 
 - name: Flush handlers (firewalld)
   meta: flush_handlers
+  when: inventory_hostname in groups.get('k8s', [])
   tags: [k8s, firewall]
