--- a/playbooks/kubectl_config.yml
+++ b/playbooks/kubectl_config.yml
@@ -1,12 +1,15 @@
 ---
 # Install kubectl on control host and copy kubeconfig from first master.
 # Runs on localhost; fetches from kube_control_plane[0] (SSH required).
+# Kubeconfig is saved per env: ~/.kube/config-<env_name>. Set KUBECONFIG to use it.
 # Tags: kubectl_config.
 
 - hosts: localhost
   connection: local
   gather_facts: true
   become: false
+  vars:
+    env_name: "{{ env_name | default(env | default('localVM')) }}"
   roles:
     - kubectl_config
   tags: [kubectl_config]
