--- a/roles/kubectl_config/tasks/kubectl_install.yml
+++ b/roles/kubectl_config/tasks/kubectl_install.yml
@@ -1,20 +1,18 @@
 ---
-# Install kubectl on the control host (localhost). Uses package manager.
+# Install kubectl on the control host (localhost). Downloads binary to user dir (no sudo).
 
-- name: Install kubectl (Debian/Ubuntu)
-  package:
-    name: kubectl
-    state: present
-  when: ansible_os_family == "Debian"
-  become: true
+- name: Ensure kubectl install directory exists
+  file:
+    path: "{{ kubectl_install_dir }}"
+    state: directory
+    mode: "0755"
   tags: [kubectl_config]
 
-- name: Install kubectl (RHEL/Rocky)
-  package:
-    name: kubectl
-    state: present
-  when: ansible_os_family == "RedHat"
-  become: true
+- name: Download kubectl binary
+  get_url:
+    url: "https://dl.k8s.io/release/{{ kubectl_version }}/bin/linux/amd64/kubectl"
+    dest: "{{ kubectl_install_dir }}/kubectl"
+    mode: "0755"
   tags: [kubectl_config]
 
 - name: Ensure .kube directory exists on control host
