--- a/roles/kubectl_config/defaults/main.yml
+++ b/roles/kubectl_config/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-# Path to admin.conf on the first master (Kubespray default).
-kubectl_config_src: /etc/kubernetes/admin.conf
+# Path to kubeconfig on the first master. Common: /root/.kube/config or /etc/kubernetes/admin.conf.
+kubectl_config_src: /root/.kube/config
 # Path to kubeconfig on the control host. Per-env: config-<env_name> so you can keep config-localVM, config-prod, etc.
 kubectl_config_dest: "{{ ansible_env.HOME | default('/tmp') }}/.kube/config-{{ env_name | default('localVM') }}"
 # First master hostname (from inventory). Used to fetch config.
