--- a/roles/kubectl_config/tasks/main.yml
+++ b/roles/kubectl_config/tasks/main.yml
@@ -1,12 +1,7 @@
 ---
-# Install kubectl on control host and copy kubeconfig from first master.
-# Task files: kubectl_install, kubectl_config.
-# Run on localhost; fetch uses delegate_to to first master (SSH required).
+# Install kubectl on control host. Kubeconfig read/write is done in the playbook (two plays: master then localhost).
+# Task files: kubectl_install. Read/write are in playbooks/kubectl_config.yml (delegate_to from localhost does not run on the master).
 
 - name: Include kubectl install tasks
   include_tasks: kubectl_install.yml
-  tags: [kubectl_config]
-
-- name: Include kubectl config copy tasks
-  include_tasks: kubectl_config.yml
   tags: [kubectl_config]
