--- a/playbooks/platform.yml
+++ b/playbooks/platform.yml
@@ -7,7 +7,8 @@
   become: false
   vars:
     env_name: "{{ env_name | default(env | default('localVM')) }}"
-    platform_install_argocd: "{{ platform_install_argocd | default(is_ArgoCD_included | default(false)) | bool }}"
+    _argocd_install_default: "{{ is_ArgoCD_included | default(false) | bool }}"
+    platform_install_argocd: "{{ platform_install_argocd | default(_argocd_install_default) | bool }}"
     controlhost_path: "{{ ansible_env.HOME }}/.local/bin:{{ ansible_env.PATH | default('/usr/local/bin:/usr/bin:/bin') }}"
     controlhost_kubeconfig: "{{ ansible_env.HOME }}/.kube/config-{{ env_name }}"
   environment:
