--- a/roles/ansible_controlhost/tasks/helm_install.yml
+++ b/roles/ansible_controlhost/tasks/helm_install.yml
@@ -15,6 +15,13 @@
     mode: "0644"
   tags: [controlhost_helm_install, kubectl_config]
 
+- name: Ensure Helm extract dir exists
+  file:
+    path: "{{ helm_extract_dir }}"
+    state: directory
+    mode: "0755"
+  tags: [controlhost_helm_install, kubectl_config]
+
 - name: Unarchive Helm to temp dir
   unarchive:
     src: "{{ helm_tarball_path }}"
