--- a/roles/k8s/defaults/main.yml
+++ b/roles/k8s/defaults/main.yml
@@ -8,3 +8,8 @@ k8s_firewall_ports:
   - port: "10257/tcp"  # kube-controller-manager
   - port: "10259/tcp"  # kube-scheduler
   - port: "10256/tcp"  # kube-proxy
+
+# Allow pod -> service CIDR so pods can reach API server (10.233.0.1). Must match Kubespray kube_pods_subnet / kube_service_addresses.
+k8s_firewall_pod_to_service: true
+kube_pods_subnet: "10.233.64.0/18"
+kube_service_addresses: "10.233.0.0/18"
